--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "remarkable": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/remarkable": "^2.0.3",
     "husky": "^8.0.1",
     "prettier": "2.7.1",
     "typescript-coverage-report": "^0.6.4"
