Add testing library linter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "stylelint.validate": ["css", "scss"],
   "eslint.options": {
-    "rules": {
-      "prettier/prettier": "off"
+    "overrideConfig": {
+      "rules": {
+        "prettier/prettier": "off"
+      }
     }
   },
   "editor.formatOnSave": true,
