--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "react-app",
     "react-app/jest",
     "plugin:testing-library/react",
-    "plugin:jest-dom/recommended"
+    "plugin:jest-dom/recommended",
+    "plugin:react-hooks/recommended"
   ],
   "rules": {
     "testing-library/no-node-access": ["error", { "allowContainerFirstChild": true }]
