--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eject": "react-scripts eject",
     "ts-coverage": "typescript-coverage-report",
     "prepare": "husky install",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
+    "eslint": "eslint src/**",
+    "stylelint": "stylelint \"**/*.css\""
   },
   "browserslist": {
     "production": [
@@ -44,9 +46,12 @@
   "devDependencies": {
     "@types/remarkable": "^2.0.3",
     "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.1",
     "prettier": "2.7.1",
+    "stylelint": "^14.15.0",
+    "stylelint-config-standard": "^29.0.0",
     "typescript-coverage-report": "^0.6.4"
   }
 }
